projet_gl/src/test/deca/context/valid/3_33/3_33_1_OpBool_And.deca
// Description:
//    Programme minimaliste faisant des opérations booléenne: And
//
// Resultats:
//    
//
// Historique:
//    cree le 22/12/2023

{
        boolean a = true;
        boolean b = false;
        a && b;
}
