projet_gl/src/test/deca/context/invalid/3_33/3_33_2_OpBool_types_2.deca
// Description:
//    Problème de typage
//
// Resultats:
//    Ligne 15: The type is boolean
// 
// Historique:
//    cree le 22/12/2023

{
   boolean a;
   int b;

   // Doit etre refuse.
   a && b;
}
